--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,8 @@ jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
+    working-directory: ./lfg_bot
     env:
-      FLY_PROJECT_PATH: ./lfg_bot
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     steps:
       - uses: actions/checkout@v3
