--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,11 @@ jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
-    working-directory: ./lfg_bot
     env:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --ha=false # ha=false to disable auto scaling - this is a chat bot, and running multiple instances will have the bot sending duplicate response messages
+      - name: Deploy
+        working-directory: ./lfg_bot
+        run: flyctl deploy --remote-only --ha=false # ha=false to disable auto scaling - this is a chat bot, and running multiple instances will have the bot sending duplicate response messages
