--- a/lfg_bot/fly.toml
+++ b/lfg_bot/fly.toml
@@ -21,7 +21,7 @@ swap_size_mb = 512
   internal_port = 8080
   force_https = true
   auto_stop_machines = false
-  auto_start_machines = false
+  auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
   [http_service.concurrency]
